--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "todos",
+  "name": "todoshka",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://marynovoselova.github.io/Todoshka",
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
@@ -13,6 +14,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
+    "gh-pages": "^6.2.0",
     "i18next": "^23.12.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -24,7 +26,9 @@
   "scripts": {
     "start": "webpack serve --config webpack.config.js --mode production",
     "build": "webpack --config webpack.config.js --mode production",
-    "test": "jest"
+    "test": "jest",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
